<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ss_bg_blur_small"
    android:orientation="vertical"
    tools:context="kz.growit.smartservice.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#64ffffff"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ss_red_blue" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/registration_form_ru"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint_ru"
                        android:inputType="textEmailAddress|textAutoComplete"
                        android:singleLine="true"
                        app:et_autoCompleteMode="multi" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text_ru"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_hint_ru"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint_ru"
                        android:inputType="textCapWords"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/otherPhonesRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/other_phones_ru"
                        android:singleLine="false" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/aboutRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/about_profile_ru"
                        android:maxLength="1500"
                        android:singleLine="false" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/educationRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/education_hint_ru"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/experienceRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/experience_ru"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_ru" />

                <com.rey.material.widget.Spinner
                    android:id="@+id/categorySpinnerRegister"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/specialization_ru" />

                <com.rey.material.widget.Spinner
                    android:id="@+id/specializationSpinnerRegister"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region_ru" />

                <com.rey.material.widget.Spinner
                    android:id="@+id/regionSpinnerRegister"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_ru" />

                <com.rey.material.widget.Spinner
                    android:id="@+id/citySpinnerRegister"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distrcits_ru" />

                <com.rey.material.widget.ListView
                    android:id="@+id/districtsRegister"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <Button
                    android:id="@+id/sendRegistrationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/my_button"
                    android:text="@string/send_registration_form_ru"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
