<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kz.growit.smartservice.SearchNewDesign">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSearchNewDesign"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <LinearLayout
            android:id="@+id/regionSelectorNewDesignSearchLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cityNewDesignSelectorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Astana"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/regionNewDesignSelectorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Akmolinskaya obl"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@android:drawable/arrow_down_float" />


        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DBE4D3"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_ru" />

        <com.rey.material.widget.Spinner
            android:id="@+id/categorySpinnerSearchNewDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DBE4D3">

        <com.rey.material.widget.EditText
            android:id="@+id/searchQuerryNewDesignEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:hint="@string/search_hint_ru"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

        <com.dd.CircularProgressButton
            android:id="@+id/searchCircularButtonNewDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cpb_textComplete="@string/search_complete_ru"
            app:cpb_textError="@string/search_error_ru"
            app:cpb_textIdle="@string/search_button_ru" />
    </RelativeLayout>

    <ListView
        android:id="@+id/searchResultsListView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
